client/css/app.css
/* ... */
@keyframes beachPulse {
  /* for pulse */
  from {
    background-color: #ffe7ba;
    -webkit-box-shadow: 0 0 9px #f8d594;
  }
  50% {
    background-color: #ffe0a7;
    -webkit-box-shadow: 0 0 18px #fcd58b;
  }
  to {
    background-color: #ffe7ba;
    -webkit-box-shadow: 0 0 9px #f8d594;
  }
}

.btn-mode-beach {
  animation-name: beachPulse;
  animation-duration: 5s;
  animation-iteration-count: infinite;
  background-repeat: no-repeat;
  background-size: 35px;
  background-image: url(/img/loot/loot-throwable-coconut.svg);
  border-bottom: 4px solid #a08a62;
  height: 41px;
}

@media (max-width: 850px), (max-width: 900px) and (min-resolution: 3dppx) {
  .btn-mode-beach {
    background-position: 0 2px;
    background-size: 22px;
    border-bottom: 2px solid #a08a62;
    box-shadow: none;
    height: 28px;
  }
}

.btn-team-queue-mode-beach {
  background-repeat: no-repeat;
  background-size: 35px;
  background-image: url(/img/loot/loot-throwable-coconut.svg);
  text-indent: 18px;
}

@media (max-width: 850px), (max-width: 900px) and (min-resolution: 3dppx) {
  .btn-team-queue-mode-beach {
    background-position: 0 2px;
    background-size: 22px;
    text-indent: 14px;
  }
}

#btns-quick-start {
  display: flex;
}

#btns-quick-start > a {
  display: inline-block;
}

#btns-quick-start > a:not(:last-child) {
  margin-right: 4px;
}

.team-menu-option {
  height: 40px;
  margin-bottom: 8px;
  border-radius: 5px;
  box-sizing: border-box;
}

.team-menu-options-buttons {
  display: flex;
}

.team-menu-options-buttons > a:not(:last-child) {
  margin-right: 4px;
}

#btn-start-team {
  display: block;
}

#team-desc {
  font-size: 14px;
  display: inline-block;
  margin-bottom: 10px;
  text-align: center;
  width: 85%;
}

#team-desc-text {
  display: inline;
  font-size: 16px;
  cursor: pointer;
}

#team-desc-text span#invite-link-text {
  color: #fff;
  font-size: 16px;
  font-weight: 400;
}

#team-desc-text span {
  color: #fff;
  font-size: 18px;
  font-weight: 700;
}

.copy-item {
  display: inline-block;
  position: relative;
  top: 8px;
  height: 32px;
  width: 32px;
  border: none;
  background-color: transparent;
  background-size: 32px;
  background-image: url(/img/gui/copy.svg);
  cursor: pointer;
}

.copy-toast {
  opacity: 0;
  position: fixed;
  top: 0;
  left: 0;
  font-size: 18px;
  color: #7cfc00;
}

.hide-item {
  display: inline-block;
  position: relative;
  top: 12px;
  height: 30px;
  width: 30px;
  border: none;
  background-repeat: no-repeat;
  background-color: transparent;
  background-size: 24px;
  background-image: url(/img/gui/eye.svg);
  cursor: pointer;
}

.server-select {
  height: 42px;
  padding: 0 4px;
  text-align-last: center;
}

.server-select optgroup {
  color: #000;
  background-color: #fff;
}

.server-select option {
  opacity: 0.5;
  color: #000;
  height: 24px;
  width: 100px;
  border: 1px solid rgba(0, 0, 0, 0.6);
  border-radius: 5px;
  background-color: #fff;
}

.btn-disabled {
  cursor: default !important;
  color: #fff !important;
  border-color: #fff !important;
}

.btn-disabled-main {
  filter: brightness(0.5);
  pointer-events: none;
  user-select: none;
}

.btn-disabled:hover {
  color: #fff !important;
}

.btn-opaque {
  opacity: 0.5;
}

.btn-hollow {
  text-align: center;
  color: #fff;
  line-height: 36px;
  font-size: 16px;
  background-color: transparent;
  border: 2px solid;
  border-color: #fff;
  cursor: pointer;
  flex: 1;
}

.btn-hollow-selected {
  border: 2px solid !important;
  border-color: #0f0 !important;
  background-color: rgba(0, 0, 0, 0.35);
}

.right-column-toggle {
  background-repeat: no-repeat;
  background-size: 28px;
  cursor: pointer;
  height: 28px;
  position: absolute;
  right: 18px;
  top: 18px;
  width: 28px;
  z-index: 3;
}

.news-toggle {
  background-image: url(/img/gui/news.svg);
}

.news-toggle > .account-alert {
  height: 18px;
  position: absolute;
  right: -2px;
  top: -4px;
  width: 18px;
}

.pass-toggle {
  background-image: url(/img/gui/pass.svg);
}

#pass-wrapper {
  display: none;
}

#news-wrapper {
  display: block;
}

#news-block {
  width: 300px;
  height: 323px;
  margin-left: 30px;
  padding: 20px;
  overflow-y: auto;
}

.news-header {
  display: block;
  margin: 0;
  font-size: 20px;
  color: gold;
}

.news-date {
  display: block;
  margin-top: 4px;
  font-size: 14px;
  color: grey;
}

.news-paragraph {
  display: block;
  margin-top: 6px;
}

.news-paragraph > .highlight {
  font-weight: 700;
  color: gold;
}

.news-paragraph > .redacted {
  font-weight: 700;
  color: red;
}

.news-image {
  margin: auto;
  width: 100%;
}

#btn-changelog {
  display: inline-block;
  width: 100%;
  height: 40px;
  margin: auto;
  color: #fff;
  font-size: 16px;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
  background: #7a7a7a;
  border-bottom: 2px solid #3e3e3e;
  box-shadow: inset 0 -2px #3e3e3e;
  line-height: 36px;
}

.pass-column {
  height: 323px;
  margin-left: 30px;
  position: absolute;
  width: 300px;
}

#pass-loading {
  z-index: 1;
}

#pass-loading-spinner {
  animation: spin 1s linear infinite;
  border: 12px solid rgba(255, 255, 255, 0.25);
  border-radius: 50%;
  border-top: 12px solid #fff;
  height: 48px;
  margin: auto;
  margin-top: 130px;
  width: 48px;
  transition: opacity 0.2s ease-in-out;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

#pass-block {
  padding: 20px;
  z-index: -1;
}

#pass-name {
  background-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 0.5),
    rgba(0, 0, 0, 0.25),
    rgba(0, 0, 0, 0)
  );
  height: 20px;
  padding: 8px;
  padding-left: 12px;
}

#pass-name > span {
  font-size: 16px;
  font-weight: 700;
}

#pass-progress {
  color: #dcdcdc;
  font-weight: 700;
  height: 114px;
  position: relative;
  top: 10px;
}
/* ... */

